<resources>
	<string name="app_name">美听</string>

	<string name="hello_world">Hello world!</string>
	<string name="share">分享</string>
	<string name="action_settings">Settings</string>
	<string name="slide_menu_sign">签到</string>
	<string name="action_search">搜索</string>
	<string name="action_more">更多</string>
	<string name="slide_menu_mymsg">我的消息</string>
	<string name="slide_menu_lv">我的等级</string>
	<string name="slide_menu_pay_music">付费音乐包</string>
	<string name="slide_menu_integral_mall">积分商城</string>
	<string name="slide_menu_mycloud">我的音乐云盘</string>
	<string name="slide_menu_recognize">听歌识曲</string>
	<string name="slide_menu_stop_time">定时停止播放</string>
	<string name="slide_menu_setting">设置</string>
	<string name="slide_menu_exit">退出应用</string>
	<string name="banner_advise">个性推荐</string>
	<string name="banner_song_list">歌单</string>
	<string name="banner_anchor_station">主播电台</string>
	<string name="banner_ranking_list">排行榜</string>
	<string name="action_fm">查看歌曲更多信息</string>
	<string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="main_singer">传播好声音</string>              <!-- 主界面用到的字符串 -->
    <string name="main_song">美听音乐</string>                 <!-- 主界面用到的字符串 -->
    <string name="main_local">本地音乐</string>                <!-- 主界面用到的字符串 -->
    <string name="main_ilike">我喜欢</string>                 <!-- 主界面用到的字符串 -->
    <string name="main_mylist">我的歌单</string>               <!-- 主界面用到的字符串 -->
    <string name="main_download">下载管理</string>             <!-- 主界面用到的字符串 -->
    <string name="main_lastplay">最近播放</string>             <!-- 主界面用到的字符串 -->
    <string name="main_search">默认搜索</string>               <!-- 主界面用到的字符串 -->
    <string name="playlist_create">创建歌单</string>           <!-- 歌单界面用到的字符串 -->
    <string name="player_lyric">美听，传播好声音</string>         <!-- 播放音乐用到的字符串 -->
    <string name="player_song">美听音乐</string>               <!-- 播放音乐用到的字符串 -->
    <string name="player_singer">有你，还有你想的他（她）</string>   <!-- 播放音乐用到的字符串 -->
    <string name="search">搜索       </string>                     <!-- 搜索用到的字符串 -->
    <string name="load">正在努力加载......</string>              <!-- 加载用到的字符串 -->
    <string name="scan">扫描歌曲</string>                       <!-- 扫描音乐用到的字符串 -->
    <string name="scan_complete">扫描完成</string>              <!-- 扫描音乐用到的字符串 -->
    <string name="scan_complete_button">完成</string>          <!-- 扫描音乐用到的字符串 -->
    <string name="scan_before">已扫描到</string>                <!-- 扫描音乐用到的字符串 -->
    <string name="scan_after">首音乐&#8230;</string>           <!-- 扫描音乐用到的字符串 -->
    <string name="scan_all">全部扫描</string>                   <!-- 扫描音乐用到的字符串 -->
    <string name="localmusic_random">随机播放</string>          <!-- 本地音乐用到的字符串 -->
    <string name="localmusic_scan">扫描本地音乐</string>          <!-- 本地音乐用到的字符串 -->
    <string name="localmusic_menu">菜单</string>               <!-- 本地音乐用到的字符串 -->
    <string name="localmusic_title">        本地音乐</string>    <!-- 本地音乐用到的字符串 -->
    <string name="list_title_w">播放队列</string>                <!-- 播放列表用到的字符串 -->
    <string name="web_song">歌曲</string>                       <!-- 网络功能用到的字符串 -->
    <string name="web_singer">歌手</string>                     <!-- 网络功能用到的字符串 -->
    <string name="web_singertop">歌手TOP3</string>              <!-- 网络功能用到的字符串 -->
    <string name="web_album">专辑</string>                      <!-- 网络功能用到的字符串 -->
    <string name="web_albumtop">专辑TOP3</string>               <!-- 网络功能用到的字符串 -->
    <string name="button">开始下载</string>
    <string name="success">下载完成</string>
    <string name="error">下载出错</string>
    <string name="stopbutton">暂停下载</string>
    <string name="sdcarderror">没有SD卡</string>
</resources>
