<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scan_linearlayout_before"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="410dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:paddingBottom="200dp"
        android:paddingLeft="100dip"
        android:paddingRight="100dip"
        android:paddingTop="40dip"
        android:scaleType="centerInside"
        android:src="@drawable/scan_over_icon" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_background"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.4"
            android:paddingBottom="40dip"
            android:paddingTop="40dip"
            android:scaleType="centerInside"
            android:src="@drawable/scan_phone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="bottom"
                    android:text="@string/scan_before"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/scan_textview_musicsum2"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:gravity="bottom"
                    android:text="0"
                    android:textColor="@color/red"
                    android:textSize="18dip"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="bottom"
                    android:text="@string/scan_after"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/scan_textview_musicpath"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dip"
                android:gravity="right"
                android:paddingRight="10dip"
                android:singleLine="true"
                android:text="@string/scan_complete"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/scan_textview_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dip"
            android:background="@drawable/color_blue_bluedrak"
            android:clickable="true"
            android:paddingBottom="8dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="8dip"
            android:text="@string/scan_complete_button"
            android:textColor="@color/white"
            android:textSize="16dip"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>