<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_skin_l"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/player_linearlayout_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@color/lyric_background"
        android:gravity="top"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:background="@drawable/player_jianbian_back_w"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView_back"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentLeft="true"
                android:background="@drawable/main_colorchange_l"
                android:clickable="true"
                android:padding="7dip"
                android:src="@drawable/player_back_w" />

            <LinearLayout
                android:id="@+id/LinearLayout_back"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_toLeftOf="@+id/player_linearlayout_right_temp"
                android:layout_toRightOf="@+id/imageView_back"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/player_textView_gequ_w"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/player_song"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <TextView
                    android:id="@+id/player_textView_geshou_w"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/player_singer"
                    android:textColor="@color/white"
                    android:textSize="12dip" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/player_linearlayout_right_temp"
                android:layout_width="120dip"
                android:layout_height="50dip"
                android:layout_alignParentRight="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/player_imageView_share_w"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:background="@drawable/main_colorchange_l"
                    android:clickable="true"
                    android:padding="7dip"
                    android:src="@drawable/player_menu_share_w" />

                <ImageView
                    android:id="@+id/player_imageView_like_w"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:background="@drawable/main_colorchange_l"
                    android:clickable="true"
                    android:padding="7dip"
                    android:src="@drawable/player_like_w" />

                <ImageView
                    android:id="@+id/iv_scanmusic"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:background="@drawable/main_colorchange_l"
                    android:clickable="true"
                    android:padding="7dip"
                    android:src="@drawable/player_current_playlist_w" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/player_relativelayout_box"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:id="@+id/player_relativelayout_change_2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="invisible" >

                <RelativeLayout
                    android:id="@+id/player_linearlayout_temp2"
                    android:layout_width="fill_parent"
                    android:layout_height="48dip"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/player_jianbian_kugou_w"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/player_imageview_change_2"
                        android:layout_width="30dip"
                        android:layout_height="30dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dip"
                        android:background="@drawable/main_colorchange_l"
                        android:clickable="true"
                        android:src="@drawable/player_lyric_expand_w" />
                </RelativeLayout>

                <com.example.musicplay.view.LyricView
                    android:id="@+id/lyricview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_above="@id/player_linearlayout_temp2"
                    android:clickable="true"
                    android:focusable="true" >
                </com.example.musicplay.view.LyricView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/player_relativelayout_change_1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="visible" >

                <RelativeLayout
                    android:id="@+id/player_linearlayout_temp"
                    android:layout_width="fill_parent"
                    android:layout_height="48dip"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/player_jianbian_kugou_w"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="50dip" >

                        <TextView
                            android:id="@+id/player_textview_default"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/player_lyric"
                            android:textColor="@color/white"
                            android:textSize="20dip" />

                        <TextView
                            android:id="@+id/player_textview_above"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="50dip"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="20dip"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/player_textview_below"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="50dip"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="20dip"
                            android:visibility="invisible" />
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/player_imageview_change_1"
                        android:layout_width="30dip"
                        android:layout_height="30dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dip"
                        android:background="@drawable/main_colorchange_l"
                        android:clickable="true"
                        android:src="@drawable/player_lyric_collapse_w" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_timetiao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/login_input_w"
                    android:padding="15dip"
                    android:singleLine="true"
                    android:text="0:00"
                    android:textColor="@color/black"
                    android:textSize="20dip"
                    android:visibility="invisible" />

                <com.example.musicplay.view.VisualizerView
                    android:id="@+id/visualizerview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_above="@id/player_linearlayout_temp"
                    android:clickable="true"
                    android:focusable="true" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_play"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@color/black_zhong" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="3" >

                <TextView
                    android:id="@+id/play_textView_time_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dip"
                    android:singleLine="true"
                    android:text="00:00"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1" >

                <SeekBar
                    android:id="@+id/player_seekBar_w"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:maxHeight="3dip"
                    android:minHeight="3dip"
                    android:paddingLeft="8dip"
                    android:paddingRight="8dip"
                    android:progressDrawable="@drawable/myselector_main_progress_w"
                    android:thumb="@drawable/myselector_main_thumb_w"
                    android:thumbOffset="4dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="3" >

                <TextView
                    android:id="@+id/play_textView_time_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dip"
                    android:singleLine="true"
                    android:text="00:00"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/white_bu" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2" >

                <ImageView
                    android:id="@+id/player_iv_shunxu"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="15dip"
                    android:background="@drawable/main_colorchange_l"
                    android:clickable="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/player_shunxu_w" >
                </ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/player_iv_pre"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="15dip"
                    android:layout_marginLeft="15dip"
                    android:layout_marginTop="15dip"
                    android:layout_weight="1"
                    android:background="@drawable/main_colorchange_l"
                    android:clickable="true"
                    android:src="@drawable/player_pre_w" >
                </ImageView>

                <ImageView
                    android:id="@+id/player_iv_play"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="15dip"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_marginTop="15dip"
                    android:layout_weight="1"
                    android:background="@drawable/main_colorchange_l"
                    android:clickable="true"
                    android:src="@drawable/player_play_w" >
                </ImageView>

                <ImageView
                    android:id="@+id/player_iv_next"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_marginTop="15dip"
                    android:layout_weight="1"
                    android:background="@drawable/main_colorchange_l"
                    android:clickable="true"
                    android:src="@drawable/player_next_w" >
                </ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2" >

                <ImageView
                    android:id="@+id/player_imageView_list_w"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="15dip"
                    android:background="@drawable/main_colorchange_l"
                    android:clickable="true"
                    android:src="@drawable/player_xuanxiang_w" >
                </ImageView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
